src/components/singlePageContent/singlePageContent.module.css
.infoContainer{
    display: flex;
    align-items: center;
    gap: 50px;
}

.draftBlock{
    background-color: var(--softBg);
    padding: 10px;
    margin-bottom: 20px;
    border-radius: 15px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    font-size: 16px;
    font-weight: 300;
}

.publishBtn{
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50px;
    border: none;
    padding: 5px 10px;
    cursor: pointer;
    font-weight: bold;
    width: max-content;
    background-color: var(--mainColor);
    color: var(--bg);
}

.textContainer{
    width: 50%;
}

.textFullContainer{
    width: 100%;
}

.title{
    font-size: 64px;
    margin-bottom: 50px;
}

.infoWrapper{
    display: flex;
    align-items: center;
    gap: 15px;
}

.userInfoWrapper{
    display: flex;
    align-items: center;
    gap: 15px;
}

.userImageContainer{
    width: 50px;
    height: 50px;
    position: relative;
}

.avatar{
    border-radius: 50%;
    object-fit: cover;
}

.userTextContainer{
    display: flex;
    flex-direction: column;
    gap: 5px;
    color: var(--softTextColor);
    font-size: 14px;
}

.username{
    font-weight: bold;
}

.date{}

.iconsContainer{
    display: flex;
    gap: 20px;
    margin-left: 20px;
    align-items: center;
}

.likeWrapper{
    display: flex;
    align-items: center;
}

.icon{
    cursor: pointer;
    color: var(--softTextColor);
    display: flex;
    align-items: center;
    justify-content: center;
}

.iconOn{
    cursor: pointer;
    color: var(--mainColor);
    display: flex;
    align-items: center;
    justify-content: center;
}

.likes{
    font-size: 14px;
    margin-left: 10px;
}

.icon:hover{
    transform: scale(1.03);
    color: var(--textColor);
}

.mobileEditContent{
    display: none;
}

.imageContainer{
    width: 50%;
    height: 350px;
    position: relative;
}

.image{
    object-fit: cover;
    border-radius: 20px;
}

.category{
    border: 1px solid var(--mainColor);
    color: var(--mainColor);
    border-radius: 50px;
    padding: 8px 16px;
    font-size: 14px;
    font-weight: bold;
    width: max-content;
    margin-left: auto;
    cursor: pointer;
    text-transform: uppercase;
}

.content{
    display: flex;
    width: 100%;
    gap: 50px;
    transition: all 1s ease;
    position: relative;
    overflow: hidden;
}

.post{
    display: flex;
    flex-direction: column;
    width: 65%;
    margin-top: 60px;
    transition: all 1s ease;
    border-radius: 10px;
    position: relative;
}

.postExtended{
    display: flex;
    flex-direction: column;
    margin-top: 60px;
    width: 100%;
    transition: all 1s ease;
    margin-right: 5px;
    opacity: 100%;
    position: relative;
}

.postSmScreen{
    display: none;
    flex-direction: column;
    width: 100%;
    margin-top: 60px;
    transition: all 1s ease;
    margin-right: 5px;
}

.doubleClickNotify{
    position: absolute;
    display: none;
    top: -35px;
    left: 0px;
    font-size: 14px;
    color: var(--softTextColor);
    background-color: var(--softBg);
    border-radius: 30px;
    width: max-content;
    padding: 10px;
}

.post:hover .doubleClickNotify{
    display: flex;
}

.postExtended:hover .doubleClickNotify{
    display: flex;
}

.editHeader{
    font-size: 24px;
    color: var(--mainColor);
}

.btnsWrapper{
    display: flex;
    align-items: center;
    gap: 15px;
    position: sticky;
    margin-left: auto;
    top: 0;
    z-index: 9999;
    padding: 15px 0px;
    width: max-content;
}

.cancelBtn{
    background-color: transparent;
    border-radius: 30px;
    width: max-content;
    border: 1px solid var(--softTextColor);
    font-size: 14px;
    color: var(--softTextColor);
    cursor: pointer;
    padding: 10px 15px;
}

.saveBtn{
    background-color: transparent;
    border-radius: 30px;
    width: max-content;
    border: 1px solid var(--mainColor);
    font-size: 14px;
    color: var(--mainColor);
    cursor: pointer;
    padding: 10px 15px;
}

.postEditContent{
    display: flex;
    flex-direction: column;
    position: relative;
    width: 100%;
    margin-top: 0px; 
}

.hideIcon{
    opacity: 0;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 5px;
    margin-right: 5px;
}

.hideIcon:hover{
    background-color: var(--softBg);
}

.container:hover .hideIcon{
    opacity: 100;
}

.iconWrapper{
    cursor: pointer;
    display: flex;
    padding: 5px;
    margin-left: -20px;
    justify-content: center;
    color: var(--softTextColor);
    width: 10px;
    height: 100%;
    transition: all 1s ease;
}

.onHideSidbar{
    display: flex;
    background-color: var(--softBg);
    border-radius: 50px;
}

.iconWrapper:hover{
    width: 40px;
    margin-left: 0px;
}

@media screen and (max-width: 1536px) {
    .title{
        font-size: 54px;
    }
}

@media screen and (max-width: 1280px) {
    .title{
        font-size: 48px;
    }
}

@media screen and (max-width: 1024px) {

    .content{
        flex-direction: column;
    }
    .infoContainer{
        flex-direction: column;
    }

    .textContainer{
        width: 100%;
    }

    .imageContainer{
        width: 100%;
    }
    .iconWrapper{
        display: none;
    }
    .onHideSidbar{
        display: none;
    }
    .post, .postExtended{
        display: none;
    }
    .postSmScreen{
        display: flex;
    }
}

@media screen and (max-width: 650px){
    .mobileEditContent{
        display: flex;
        font-size: 14px;
        color: var(--softTextColor);
        background-color: var(--softBg);
        border-radius: 30px;
        width: max-content;
        padding: 10px;
    }
}

@media screen and (max-width: 640px) {
    .imageContainer{
        width: 100vw;
    }
    .infoWrapper{
        flex-direction: column;
        align-items: start;
    }
    .iconsContainer{
        margin-left: 0px;
    }
    .image{
        border-radius: 0px;
    }
    .category{
        display: none;
    }
    
    .title{
        font-size: 36px;
    }
}

